--- a/256/customer_register.css
+++ b/256/customer_register.css
@@ -51,8 +51,8 @@ p{
 }
 
 form{
-    height: 540px;
-    width: 400px;
+    height: max-content;
+    width: 500px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
     transform: translate(-50%,-50%);
