--- a/256/customer_register.css
+++ b/256/customer_register.css
@@ -45,10 +45,20 @@ body{
     bottom: -80px;
 }
 
-p{
-  margin: 10px;
+.errort{
+  width: max-content;
+  border: #ff512f 2px solid;
+  background-color: rgba(255, 255, 255, 0.3);
+  padding: 5px;
+  position: absolute;
+  border-radius: 20px;
+  top: 20px;
+  left: 20px;
+  display: block;
   text-align: center;
 }
+
+
 
 form{
     height: max-content;
