--- a/256/marketloginpage.css
+++ b/256/marketloginpage.css
@@ -44,8 +44,14 @@ body{
     left: -30px;
     bottom: -80px;
 }
+
+p{
+  margin: 10px;
+  text-align: center;
+}
+
 form{
-    height: 520px;
+    height: max-content;
     width: 400px;
     background-color: rgba(255,255,255,0.13);
     position: absolute;
