Edit Market User Profile CSS

--- a/256/marketmain.css
+++ b/256/marketmain.css
@@ -72,11 +72,11 @@
 }
 
 .product{
-	margin: auto;  width: 80%;
+	margin: 35px;  width: 50%;
 	background: var(--sidebar);
     padding: 2em;
     border-radius: 0.75rem;
-    line-height: 1.6;
+    line-height: 1;
     overflow: hidden;
     font-size: 0.875rem;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -1336,8 +1336,22 @@ h2{
 }
 
 .app-content-submit{
-	margin-top: 50px;
+	margin-top: 30px;
 	display: flex;
   	justify-content: center;
   	align-items: center;
+}
+
+/* For desktop */
+main {
+    display: flex;
+    flex-wrap: wrap;
+	flex-direction: column;
+}
+
+/* For mobile */
+@media screen and (max-width: 768px) {
+    main {
+        flex-direction: row; /* Change flex direction to column for mobile */
+    }
 }
