last fix part 1

--- a/256/loginpage.css
+++ b/256/loginpage.css
@@ -11,6 +11,21 @@ h1 {
   margin: 0.1em;
 }
 
+section {
+  height: max-content;
+  width: 500px;
+  background-color: rgba(255,255,255,0.13);
+  position: absolute;
+  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 50%;
+  border-radius: 10px;
+  backdrop-filter: blur(10px);
+  border: 2px solid rgba(255,255,255,0.1);
+  box-shadow: 0 0 40px rgba(8,7,16,0.6);
+  padding: 50px 35px;
+}
+
 .Hero {
   color: white;
   margin: 0;
@@ -19,6 +34,7 @@ h1 {
   display: flex;
   overflow: hidden;
   justify-content: center;
+  
 }
 
 .Hero__content {
