--- a/256/notification.css
+++ b/256/notification.css
@@ -1,6 +1,5 @@
 body {
-  background: #eee;
-  font-family: "Brandon Grotesque", Avenir, "Lato", sans-serif;
+  background: none;
 }
 
 .notf-container {
